# Receipt-AI

./: README.md
backend/: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  parse_bill.py  pyproject.toml  rate_limiting.py  readme.md  requirements.txt
backend/app/: main.py
backend/app/utils/: parse_bill.py  rate_limiting.py  token_usage.py
frontend/: README.md  eslint.config.mjs  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
frontend/app/about/: page.tsx
frontend/app/api/proxy/parse_bill/: route.ts
frontend/app/api/proxy/validate-key/: route.ts
frontend/components/: api-key-input.tsx  credits-display.tsx  file-upload.tsx  json-viewer.tsx  navbar.tsx  theme-toggle.tsx
